Fix Layout Issues with New AppHeader

--- a/src/components/Workflow/styles/Workflow.scss
+++ b/src/components/Workflow/styles/Workflow.scss
@@ -1,5 +1,4 @@
 .process {
   position: relative;
   overflow: auto !important;
-  height: 100%;
 }
